# MsaCalc

./: CMakeLists.txt  Gnuplot.h  LICENSE  README.md  msa.h
Test/: main.cpp  test.cpp
